[DevTools] Fix InspectorOverlay breakage after suspend.

Split up clearInternal and clear, with latter resetting agents references.

BUG=607070

Review-Url: https://codereview.chromium.org/1957303003
Cr-Commit-Position: refs/heads/master@{#392832}

Former-commit-id: 67722794ed6f4ce1cdcc4cbc02ca7ce0fc454c40